# adi-svc

./: .dockerignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
adi-svc/: .env.example  .gitignore  Cargo.toml  build.rs
adi-svc/proto/: document_intelligence.proto
adi-svc/src/: lib.rs  main.rs
adi-svc/src/application/: errors.rs  mod.rs  ports.rs  services.rs
adi-svc/src/domain/: errors.rs  mod.rs  models.rs  value_objects.rs
adi-svc/src/infrastructure/: azure.rs  config.rs  mod.rs  postgres_tracker.rs  storage.rs  tracker.rs
adi-svc/src/presentation/: converters.rs  grpc.rs  mod.rs  rest.rs
adi-web/: README.md  package-lock.json  package.json
adi-web/public/: index.html
adi-web/src/: App.css  App.js  index.css  setupProxy.js  theme.js
